Update strings file

--- a/Client/Ecosia/L10N/en.lproj/Ecosia.strings
+++ b/Client/Ecosia/L10N/en.lproj/Ecosia.strings
@@ -34,3 +34,6 @@
 "We use the profit from your searches to plant trees where they are needed most" = "We use the profit from your searches to plant trees where they are needed most";
 "Websites will always open with Ecosia, planting even more trees" = "Websites will always open with Ecosia, planting even more trees";
 "You need around 45 searches to plant a tree. Keep going!" = "You need around 45 searches to plant a tree. Keep going!";
+"Help us improve our new app" = "Help us improve our new app";
+"Let us know what you like, dislike, and want to see in the future." = "Let us know what you like, dislike, and want to see in the future.";
+"Share your feedback" = "Share your feedback";
