--- a/Client/Ecosia/L10N/en.lproj/Ecosia.strings
+++ b/Client/Ecosia/L10N/en.lproj/Ecosia.strings
@@ -39,3 +39,6 @@
 "Let us know what you like, dislike, and want to see in the future." = "Let us know what you like, dislike, and want to see in the future.";
 "Share your feedback" = "Share your feedback";
 "Sit tight, we are getting ready for you…" = "Sit tight, we are getting ready for you…";
+"We hit a glitch" = "We hit a glitch";
+"We are momentarily unable to load all of your settings." = "We are momentarily unable to load all of your settings.";
+"Continue" = "Continue";
