Add "Blog" to L10N

--- a/Client/Ecosia/L10N/en.lproj/Ecosia.strings
+++ b/Client/Ecosia/L10N/en.lproj/Ecosia.strings
@@ -1,5 +1,6 @@
 "%@ days ago" = "%@ days ago";
 "Autocomplete" = "Autocomplete";
+"Blog" = "Blog";
 "Close all" = "Close all";
 "Ecosia recommends" = "Ecosia recommends";
 "Ecosia won’t remember the pages you visited, your search history or your autofill information once you close a tab. Your searches still contribute to trees." = "Ecosia won’t remember the pages you visited, your search history or your autofill information once you close a tab. Your searches still contribute to trees.";
