--- a/Client/Ecosia/L10N/en.lproj/Ecosia.strings
+++ b/Client/Ecosia/L10N/en.lproj/Ecosia.strings
@@ -42,3 +42,6 @@
 "We hit a glitch" = "We hit a glitch";
 "We are momentarily unable to load all of your settings." = "We are momentarily unable to load all of your settings.";
 "Continue" = "Continue";
+"Welcome to the new Ecosia app!" = "Welcome to the new Ecosia app!";
+"We've done some re-arranging to make it easier for you to browse the web and plant trees with Ecosia." = "We've done some re-arranging to make it easier for you to browse the web and plant trees with Ecosia.";
+"Take a look" = "Take a look";
